workload/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pbl-security
  labels:
    name: pbl-security
